fixes batch
